Split liftsh options, modifying LIFTSH_OPTS is safer now. You can now do: LIFTSH_OPTS="-Dpublish.remote=true -Xmx3g" ./liftsh clean-plugins reload update publish